--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1614,7 +1614,7 @@
                                                                 <TextEdit @bind-Text="productModule.Title" />
                                                             </Div>
                                                             <Div Class="col-2 pb-1">
-                                                                <Label>@L["SubTitle"]</Label>
+                                                                <Label>@L["SubTitle"] <Span Class="text-danger">*</Span></Label>
                                                                 </Div>
                                                             <Div Class="col-12 pb-1">
                                                                 <TextEdit @bind-Text="@productModule.SubTitle" />
