--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1597,21 +1597,21 @@
                                                                 <TextEdit @bind-Text="productModule.Title" />
                                                             </Div>
                                                             <Div Class="col-2 pb-1">
-                                                                <Label>@L["SubTitle"]</Label>
-                                                                </Div>
-                                                                <Div Class="col-12 pb-1">
-                                                                    <TextEdit @bind-Text="@productModule.SubTitle" />
-                                                                </Div>
-                                                                <Div Class="col-2 pb-1">
-                                                                    <Label>@L["BodyText"]</Label>
-                                                                </Div>
-                                                                <Div Class="col-12 pb-1">
-                                                                    <TextEdit @bind-Text="@productModule.Content" />
-                                                                </Div>
+                                                                <Label>@L["SubTitle"] <Span Class="text-danger">*</Span></Label>
+                                                            </Div>
+                                                            <Div Class="col-12 pb-1">
+                                                                <TextEdit @bind-Text="@productModule.SubTitle" />
+                                                            </Div>
+                                                            <Div Class="col-2 pb-1">
+                                                                <Label>@L["BodyText"]</Label>
+                                                            </Div>
+                                                            <Div Class="col-12 pb-1">
+                                                                <TextEdit @bind-Text="@productModule.Content" />
                                                             </Div>
                                                         </Div>
                                                     </Div>
                                                 </Div>
+                                            </Div>
                                         }
                                     }
 
