--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -294,7 +294,7 @@
                                         </Span>
                                     </TableHeaderCell>
                                     <TableHeaderCell Class="text-center">
-                                        @L["StockOnHand"]
+                                        @L["CurrentStock"]
                                         <Span Class="d-block pt-1 text-primary cursor-pointer"
                                               @onclick="() => CopyToAll(nameof(CreateItemDetailsDto.StockOnHand))">
                                             @L["CopyToAll"]
