--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -2,18 +2,20 @@
 
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Items.Dtos;
+@using Kooco.Pikachu.ProductCategories
 @using Pikachu.Items;
 @using Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
 @using System.ComponentModel
 @using Blazorise.Components;
 @using Blazorise.LoadingIndicator;
-
+@inherits PikachuComponentBase
 @inject IItemAppService AppService
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<PikachuResource> L
 @inject IMessageService _message
 @inject IJSRuntime JSRuntime;
+@inject IProductCategoryAppService ProductCategoryAppService
 
 <style>
     .row {
@@ -454,6 +456,81 @@
 
                 </div>
             </div>
+            <Divider></Divider>
+            <Row>
+                <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
+                    <h4>@L["ProductCategories"]</h4>
+                </Column>
+                <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
+                    <Autocomplete TItem="KeyValueDto"
+                                  TValue="Guid?"
+                                  Data="@ProductCategoryLookup"
+                                  TextField="@(( item ) => item.Name)"
+                                  ValueField="@(( item ) => item.Id)"
+                                  @bind-SelectedText="SelectedAutoCompleteText"
+                                  Placeholder="Search..."
+                                  Filter="AutocompleteFilter.StartsWith"
+                                  CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
+                                  HighlightSearch
+                                  Immediate="true"
+                                  SelectedValueChanged="OnSelectedValueChanged"
+                                  @ref="AutocompleteField">
+                        <NotFoundContent> @L["NotFound"] </NotFoundContent>
+                    </Autocomplete>
+                </Column>
+                <Column ColumnSize="ColumnSize.Is12">
+                    @if (CreateItemDto.ItemCategories.Count > 0 || RowLoading)
+                    {
+                        <Div Class="mt-2">
+                            <Table Striped>
+                                <TableHeader>
+                                    <TableRow>
+                                        <TableHeaderCell>@L["ProductCategory"]</TableHeaderCell>
+                                        <TableHeaderCell TextAlignment="TextAlignment.Center">@L["Image"]</TableHeaderCell>
+                                        <TableHeaderCell TextAlignment="TextAlignment.Center"></TableHeaderCell>
+                                    </TableRow>
+                                </TableHeader>
+                                <TableBody>
+                                    @foreach (var itemCategory in CreateItemDto.ItemCategories)
+                                    {
+                                        <TableRow>
+                                            <TableRowCell>
+                                                <h5 class="m-0">@itemCategory.ProductCategoryName</h5>
+                                                <Span Class="bg-lightgrey rounded-3" Style="padding: 1px 10px;">
+                                                    <Copy Text="@itemCategory.ProductCategoryId" ShouldDisplayIcon="false"></Copy>
+                                                </Span>
+                                            </TableRowCell>
+                                            <TableRowCell TextAlignment="TextAlignment.Center">
+                                                @if (!itemCategory.ImageUrl.IsNullOrWhiteSpace())
+                                                {
+                                                    <Image Fluid Source="@itemCategory.ImageUrl" Style="height: 150px;"></Image>
+                                                }
+                                            </TableRowCell>
+                                            <TableRowCell TextAlignment="TextAlignment.Center" Style="width: 150px"
+                                                          Clicked="@(() => RemoveItemCategory(itemCategory))">
+                                                <PikachuButton Class="pk-btn-sm pk-btn-outline-danger">
+                                                    <i class="fas fa-trash"></i>
+                                                    @L["Remove"]
+                                                </PikachuButton>
+                                            </TableRowCell>
+                                        </TableRow>
+                                    }
+                                    @if (RowLoading)
+                                    {
+                                        <TableRow>
+                                            <TableRowCell ColumnSpan="3">
+                                                <Div TextAlignment="TextAlignment.Center" Class="py-2">
+                                                    <Span Class="spinner-border"></Span>
+                                                </Div>
+                                            </TableRowCell>
+                                        </TableRow>
+                                    }
+                                </TableBody>
+                            </Table>
+                        </Div>
+                    }
+                </Column>
+            </Row>
             <Divider></Divider>
             <div class="row">
                 <div class="col-2">
